# fastapi-spo

./: main.py  pyproject.toml  sqlite3.db
auth/: routers.py  schemas.py  utils.py
blog/: database.py  models.py  routers.py  schemas.py
user/: models.py  routers.py  schemas.py
